tests/neg-macros/i14137/Test_2.scala
package x

object Main:

  def main(args: Array[String]):Unit =
    Macro.genOp(10) // error
